--- a/manifests/kafka-values.yaml
+++ b/manifests/kafka-values.yaml
@@ -4,8 +4,16 @@ provisioning:
     - name: cve
       partitions: 3
       replicationFactor: 3
+  podAnnotations:
+    proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
+  postScript: |
+    trap "curl --max-time 2 -s -f -XPOST http://127.0.0.1:15020/quitquitquit" EXIT
+    while ! curl -s -f http://127.0.0.1:15020/healthz/ready; do sleep 1; done
+    echo "Ready!"
 
 controller:
+  podAnnotations:
+    proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
   initContainerResources:
     limits:
       cpu: "500m"
@@ -20,3 +28,8 @@ controller:
     requests:
       cpu: "200m"
       memory: "1024Mi"
+
+
+broker: 
+  podAnnotations:
+    proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
