--- a/manifests/postgres-values.yaml
+++ b/manifests/postgres-values.yaml
@@ -15,6 +15,7 @@ postgresql:
 
   podLabels:
     networkLabel: "db"
+    sidecar.istio.io/inject: "false"
   networkPolicy:
     enabled: true
     allowExternal: false
@@ -41,6 +42,7 @@ pgpool:
   adminPassword: "base64encodedpassword"
   podLabels:
     networkLabel: "db"
+    sidecar.istio.io/inject: "false"
   networkPolicy:
     enabled: true
     allowExternal: false
