fix: changed hosts

--- a/manifests/helm-istio-gateway-values.yaml
+++ b/manifests/helm-istio-gateway-values.yaml
@@ -2,6 +2,7 @@ service:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+    external-dns.alpha.kubernetes.io/hostname: grafana.shyammylai.me
 
 # labels:
 #   app: gateway
