--- a/manifests/cert-mgr-role.yaml
+++ b/manifests/cert-mgr-role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: cert-manager-sa-tokenrequest
-  namespace: prometheus-graphana
+  namespace: istio-system
 rules:
   - apiGroups: [""]
     resources: ["serviceaccounts/token"]
