--- a/manifests/cert-mgr-rolebinding.yaml
+++ b/manifests/cert-mgr-rolebinding.yaml
@@ -2,11 +2,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: cert-manager-cert-manager-sa-tokenrequest
-  namespace: prometheus-graphana
+  namespace: istio-system
 subjects:
   - kind: ServiceAccount
     name: cert-manager-sa
-    namespace: prometheus-graphana
+    namespace: istio-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
