--- a/manifests/certificate-issuer.yaml
+++ b/manifests/certificate-issuer.yaml
@@ -2,17 +2,19 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: letsencrypt-prod
-  namespace: prometheus-graphana
+  # namespace: prometheus-graphana
+  namespace: istio-system
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
+    # server: https://acme-v02.api.letsencrypt.org/directory
     email: ubalasubramanian03@gmail.com
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
     - selector:
         dnsZones:
-          - "grafana.shyammylai.me"
+          - "shyammylai.me"
       dns01:
         route53:
           region: us-east-1
