--- a/manifests/certificate-values.yaml
+++ b/manifests/certificate-values.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: grafana-cert
-  # namespace: prometheus-graphana
+  # namespace: prometheus-grafana
   namespace: istio-system
 spec:
   secretName: grafana-cert-tls
