--- a/manifests/virtual-service-grafana.yaml
+++ b/manifests/virtual-service-grafana.yaml
@@ -2,29 +2,29 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: grafana-virtual-service
-  namespace: prometheus-graphana
+  namespace: prometheus-grafana
 spec:
-  hosts:  # Or your specific domain
-  - grafana.shyammylai.me
+  hosts: # Or your specific domain
+    - grafana.shyammylai.me
   gateways:
-  # - istio-system/grafana-gateway
-  - prometheus-graphana/grafana-gateway
+    # - istio-system/grafana-gateway
+    - prometheus-grafana/grafana-gateway
   http:
-  - match:
-    - uri:
-        prefix: "/"
-    route:
-    - destination:
-        host: graphana-prometheus-grafana.prometheus-graphana.svc.cluster.local
-        port:
-          number: 80
+    - match:
+        - uri:
+            prefix: "/"
+      route:
+        - destination:
+            host: grafana-prometheus-grafana.prometheus-grafana.svc.cluster.local
+            port:
+              number: 80
   tls:
-  - match:
-    - port: 443
-      sniHosts:
-        - grafana.shyammylai.me
-    route:
-    - destination:
-        host: graphana-prometheus-grafana.prometheus-graphana.svc.cluster.local
-        port:
-          number: 80
+    - match:
+        - port: 443
+          sniHosts:
+            - grafana.shyammylai.me
+      route:
+        - destination:
+            host: grafana-prometheus-grafana.prometheus-grafana.svc.cluster.local
+            port:
+              number: 80
