--- a/manifests/ingress-gateway.yaml
+++ b/manifests/ingress-gateway.yaml
@@ -16,13 +16,15 @@ spec:
         name: http
         protocol: HTTP
       hosts:
-        - "shyammylai.me"
+        - "grafana.shyammylai.me"
+        - "llm.shyammylai.me"
     - port:
         number: 443
         name: https
         protocol: HTTPS
       hosts:
-        - "shyammylai.me"
+        - "grafana.shyammylai.me"
+        - "llm.shyammylai.me"
       tls:
         # httpsRedirect: true
         mode: SIMPLE
