--- a/manifests/certificate-issuer.yaml
+++ b/manifests/certificate-issuer.yaml
@@ -14,7 +14,7 @@ spec:
     solvers:
       - selector:
           dnsZones:
-            - "grafana.shyammylai.me"
+            - "grafanav1.shyammylai.me"
         dns01:
           route53:
             region: us-east-1
