--- a/manifests/helm-istio-gateway-values.yaml
+++ b/manifests/helm-istio-gateway-values.yaml
@@ -2,7 +2,6 @@ service:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
-    external-dns.alpha.kubernetes.io/hostname: grafana.shyammylai.me, llm.shyammylai.me
-
+    external-dns.alpha.kubernetes.io/hostname: grafanav1.shyammylai.me, llm.shyammylai.me
 # labels:
 #   app: gateway
